# backend/core/model/persona.go
@@ -1,18 +1,26 @@
 package model
 
-import "github.com/google/uuid"
+import (
+	"encoding/json"
+	"github.com/go-pg/pg/v10"
+	"github.com/google/uuid"
+	"time"
+)
 
 type Persona struct {
-	tableName       struct{}  `pg:"personas"`
-	ID              int64     `json:"id,omitempty"`
-	Name            string    `json:"name,omitempty"`
-	LlmID           int64     `json:"llm_id,omitempty"`
-	DefaultPersona  bool      `json:"default_persona,omitempty" pg:",use_zero"`
-	Description     string    `json:"description,omitempty"`
-	TenantID        uuid.UUID `json:"tenant_id,omitempty"`
-	IsVisible       bool      `json:"is_visible,omitempty" pg:",use_zero"`
-	DisplayPriority int       `json:"display_priority,omitempty"`
-	StarterMessages JSON      `json:"starter_messages,omitempty" pg:",use_zero"`
-	LLM             *LLM      `json:"llm,omitempty" pg:"rel:has-one"`
-	Prompt          *Prompt   `json:"prompt,omitempty" pg:"rel:has-one"`
+	tableName       struct{}        `pg:"personas"`
+	ID              int64           `json:"id,omitempty"`
+	Name            string          `json:"name,omitempty"`
+	LlmID           int64           `json:"llm_id,omitempty"`
+	DefaultPersona  bool            `json:"default_persona,omitempty" pg:",use_zero"`
+	Description     string          `json:"description,omitempty"`
+	TenantID        uuid.UUID       `json:"tenant_id,omitempty"`
+	IsVisible       bool            `json:"is_visible,omitempty" pg:",use_zero"`
+	DisplayPriority int             `json:"display_priority,omitempty"`
+	StarterMessages json.RawMessage `json:"starter_messages,omitempty" pg:",use_zero"`
+	LLM             *LLM            `json:"llm,omitempty" pg:"rel:has-one"`
+	Prompt          *Prompt         `json:"prompt,omitempty" pg:"rel:has-one,fk:id,join_fk:persona_id"`
+	CreatedDate     time.Time       `json:"created_date,omitempty"`
+	UpdatedDate     pg.NullTime     `json:"updated_date,omitempty" pg:",use_zero"`
+	DeletedDate     pg.NullTime     `json:"deleted_date,omitempty" pg:",use_zero"`
 }
